// Copyright 2018-2023 CERN
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// In applying this license, CERN does not waive the privileges and immunities
// granted to it by virtue of its status as an Intergovernmental Organization
// or submit itself to any jurisdiction.

syntax = "proto3";

package revad.pingpong;

option go_package = "github.com/cs3org/reva/grpc/internal/services/pingpong/proto";

service PingPongService {
  rpc Ping(PingRequest) returns (PingResponse);
  rpc Pong(PongRequest) returns (PongResponse);
}

message PingRequest {
  string info = 1;
}

message PingResponse {
  string info = 1;
}
message PongRequest {
  string info = 1;
}

message PongResponse {
  string info = 1;
}

// to compile this into grpc, cd in the directory where this file lives and execute:
// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative pingpong.proto
